--- a/src/components/UI/Card/styles.module.css
+++ b/src/components/UI/Card/styles.module.css
@@ -5,7 +5,13 @@
     border-radius: 10px;
 }
 
-.card-shadow {
+.shadow {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
+.title {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: .01rem solid #111727;
+}
