--- a/src/components/BalanceCard/styles.module.css
+++ b/src/components/BalanceCard/styles.module.css
@@ -1,10 +1,8 @@
 .card {
     width: 250px;
-    height: 100px;
-    margin: 10px 0px;
-}
-
-.row {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    height: 75px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: right;
 }
