--- a/src/components/UI/View/styles.module.css
+++ b/src/components/UI/View/styles.module.css
@@ -1,6 +1,11 @@
 .view {
     width: 100vw;
     height: 100vh;
+}
+
+.view-body {
+    width: 100vw;
+    height: 100vh;
     background-color: #ebecf0;
     display: flex;
     align-items: center;
