--- a/src/views/Wallet/Balances/styles.module.css
+++ b/src/views/Wallet/Balances/styles.module.css
@@ -1,4 +1,7 @@
-.card {
+.balances-list {
+    height: 250px;
+    margin-top: 20px;
+    overflow: scroll;
     display: flex;
     flex-direction: column;
     gap: 20px;
