--- a/src/components/Transaction/styles.module.css
+++ b/src/components/Transaction/styles.module.css
@@ -1,29 +1,43 @@
-.transaction {
-    width: 500px;
+.card {
     padding: 0;
     display: flex;
     flex-direction: column;
 }
 
-.balance {
+.card-header {
     display: flex;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
-.balance > div:first-child {
+.card-header>div:first-child {
     width: 20%;
-    display: flex;
-    align-items: center;
 }
 
-.balance > div:last-child {
-    margin-left: auto;
-    margin-right: 0;
+.card-header>div:last-child {
+    width: 80%;
+    text-align: right;
 }
 
-.details {
+.card-body {
+    padding: 10px;
     border: 0.1px solid #303132;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+@media screen and (max-width: 700px) {
+    .card-header {
+        flex-direction: column;
+    }
+
+    .card-header>div:first-child {
+        width: 100%;
+        text-align: right;
+        padding-bottom: 10px;
+    }
+
+    .card-header>div:last-child {
+        width: 100%;
+    }
 }
