--- a/src/components/UI/View/styles.module.css
+++ b/src/components/UI/View/styles.module.css
@@ -1,14 +1,8 @@
 .view {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     background-color: #ebecf0;
 }
 
-.view-body {
-    display: flex;
-    flex: 1 1 auto;
-    align-items: center;
-    justify-content: center;
-}
