--- a/src/views/Wallet/styles.module.css
+++ b/src/views/Wallet/styles.module.css
@@ -1,5 +1,34 @@
-.content {
+.view-body {
     display: flex;
-    flex-direction: row;
-    gap: 15px;
+    justify-content: center;
+}
+
+.content {
+    width: 75%;
+    padding: 20px 0;
+    display: flex;
+    gap: 20px;
+}
+
+.balances {
+    width: 35%;
+}
+
+.transactions {
+    width: 65%;
+}
+
+@media screen and (max-width: 800px) {
+    .content {
+        width: 90%;
+        flex-direction: column;
+    }
+
+    .balances {
+        width: 100%;
+    }
+
+    .transactions {
+        width: 100%;
+    }
 }
