login: fix login layout styles

--- a/src/views/Login/styles.module.css
+++ b/src/views/Login/styles.module.css
@@ -1,3 +1,10 @@
+.view-body {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .login-card {
     width: 350px;
 }
