--- a/src/components/UI/View/styles.module.css
+++ b/src/components/UI/View/styles.module.css
@@ -1,8 +1,7 @@
 .view {
     width: 100vw;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     background-color: #ebecf0;
 }
-
