--- a/src/components/UI/Message/styles.module.css
+++ b/src/components/UI/Message/styles.module.css
@@ -1,7 +1,11 @@
 .message {
     padding: 10px;
+    margin: 50px;
+    bottom: 0;
+    right: 0;
     font-size: .85rem;
     border-radius: 5px;
+    position: absolute;
 }
 
 .error {
