chore: add prettier

--- a/src/components/UI/Card/styles.module.css
+++ b/src/components/UI/Card/styles.module.css
@@ -1,20 +1,20 @@
 .card {
-    padding: 15px;
-    background-color: #fff;
-    border-radius: 10px;
+  padding: 15px;
+  background-color: #fff;
+  border-radius: 10px;
 }
 
 .card-shadow {
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .card-header {
-    padding: 10px;
+  padding: 10px;
 }
 
 .card-title {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-    border-bottom: .01rem solid #111727;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 0.01rem solid #111727;
 }
