--- a/src/components/UI/Message/styles.module.css
+++ b/src/components/UI/Message/styles.module.css
@@ -3,9 +3,9 @@
   margin: 50px;
   bottom: 0;
   left: 0;
-  font-size: 0.9rem;
+  font-size: 1rem;
   border-radius: 5px;
-  position: absolute;
+  position: fixed;
   z-index: 2;
 }
 
